syntax = "proto3";
package user;


// The User service definition.
service UserApi {   
  // Get User by ID - A server-to-client streaming RPC.
  rpc GetUser(UserFilter) returns (stream User) {}
  // Create a new User - A simple RPC 
  rpc AddUser(User) returns (UserResponse) {}
  // Update User
  rpc UpdateUser(User) returns (UserResponse) {}
  // Delete User
  rpc DeleteUser(UserFilter) returns (UserResponse) {}
}

// Request message for creating a new user
message User {
  string id = 1;  // Unique ID number for a user.
  string name = 2;
  string email = 3;
  string phone= 4;
  
  message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string zip = 4;
    bool isShippingAddress = 5; 
  }

  repeated Address addresses = 5;
}

message UserResponse {
  string id = 1;
  bool success = 2;
}
message UserFilter {    
  string id = 1;
}